--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </a>
     <section class="intro" style="min-height: 80vh;">
         <div class="container">
-            <div data-aos="zoom-in-up" data-aos-duration="3000" class="text-center mx-auto">
+            <div data-aos="zoom-in" data-aos-duration="3000" class="text-center mx-auto">
                 <img src="static/images/logo.png" alt="Pilgrims Logo" style="width:35%; height:30%;">
             </div>
-            <div class="wrapper">
+            <div data-aos="zoom-in-up" data-aos-duration="1500" class="wrapper">
                 <div class="typing-demo text-muted">
                   Website under construction...!
                 </div>
