--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div data-aos="zoom-in" data-aos-duration="3000" class="text-center mx-auto">
                 <img src="static/images/logo.png" alt="Pilgrims Logo" style="width:35%; height:30%;">
             </div>
-            <div data-aos="zoom-in-up" data-aos-duration="1500" class="wrapper">
+            <div data-aos="zoom-in-up" data-aos-duration="1500" class="wrapper display-flex">
                 <div class="typing-demo text-muted">
                   Website under construction...!
                 </div>
