--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div data-aos="zoom-in-up" data-aos-duration="1500" class="wrapper">
                 <div class="typing-demo text-muted text-break">
-                  Website under construction...!
+                  Website under<br>construction...!
                 </div>
             </div>
         </div>
