--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <img src="static/images/logo.png" alt="Pilgrims Logo" style="width:35%; height:30%;">
             </div>
             <div data-aos="zoom-in-up" data-aos-duration="1500" class="wrapper">
-                <div class="typing-demo text-muted text-break">
-                  Website under<br>construction...!
+                <div class="typing-demo text-muted">
+                  Website under construction!
                 </div>
             </div>
         </div>
