Minor changes to style

--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
             <div data-aos="zoom-in" data-aos-duration="3000" class="text-center mx-auto">
                 <img src="static/images/logo.png" alt="Pilgrims Logo" style="width:35%; height:30%;">
             </div>
-            <div data-aos="zoom-in-up" data-aos-duration="1500" class="wrapper">
-                <div class="typing-demo text-muted">
-                  Website under construction...!
-                </div>
+            <div data-aos="fade-left" data-aos-duration="1500" class="typewriter mx-auto">
+                <p style="font-size:3vw;">The <span style="color: orange;">website</span> is under construction</p>
             </div>
         </div>
     </section>
