--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
 </head>
 <body>
-    <!-- <video autoplay muted loop id="myVideo">
+    <video autoplay muted loop id="myVideo">
         <source src="static/background.mp4" type="video/mp4">
-    </video> -->
+    </video>
     <a class="navbar-brand" href="https://github.com/pilgrimfathers">
         <img src="static/images/logo.png" alt="..." height="80">
     </a>
