--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <p><i class="fas fa-home me-3 text-grayish"></i> Kanjirappally, Kottayam - 686518</p>
                 <p>
                 <i class="fas fa-envelope me-3 text-grayish"></i>
-                pilgrims@gmail.com
+                pilgrimsatwork@gmail.com
                 </p>
                 <p><i class="fas fa-phone me-3 text-grayish"></i> +91 9061 652 152</p>
                 <p><i class="fas fa-phone me-3 text-grayish"></i> +91 8593 871 625</p>
