--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h6 class="text-uppercase fw-bold mb-4">Pilgrims</h6>
                 <p>
                 We are a group of Engineering students aiming to revolutionize the market with
-                products that match the needs users desire. Join together us in our journey!
+                products that match the needs that users desire. Join together with us in our journey!
                 </p>
             </div>
             <!-- Grid column -->
