Font size changed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="static/images/logo.png" alt="Pilgrims Logo" style="width:35%; height:30%;">
             </div>
             <div data-aos="fade-left" data-aos-duration="1500" class="typewriter mx-auto">
-                <p style="font-size:3vw;">The <span style="color: orange;">website</span> is under construction</p>
+                <p>The <span style="color: orange;">website</span> is under construction</p>
             </div>
         </div>
     </section>
@@ -32,7 +32,7 @@
         <!-- Section: Social media -->
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
         <!-- Left -->
-        <div class="me-5 d-none d-lg-block">
+        <div class="ml-4 d-none d-lg-block">
             <span>Get connected with us on social networks:</span>
         </div>
         <!-- Left -->
